--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "bugs": {
     "url": "https://github.com/Frerarj/frontend-project-46/issues"
   },
-  "homepage": "https://github.com/Frerarj/frontend-project-46#readme"
+  "homepage": "https://github.com/Frerarj/frontend-project-46#readme",
+  "dependencies": {
+    "eslint": "^8.43.0"
+  }
 }
