--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "type": "module",
   "description": "Gendiff — the second Hexlet project",
-  "main": "index.js",
+  "bin": {
+    "gendiff": "bin/gendiff.js"
+  },
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,6 +21,7 @@
   },
   "homepage": "https://github.com/Frerarj/frontend-project-46#readme",
   "dependencies": {
+    "commander": "^11.0.0",
     "eslint": "^8.43.0"
   }
 }
