--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/Frerarj/frontend-project-46#readme",
   "dependencies": {
     "commander": "^11.0.0",
-    "eslint": "^8.43.0"
+    "eslint": "^8.43.0",
+    "lodash": "^4.17.21"
   }
 }
