--- a/package.json
+++ b/package.json
@@ -22,7 +22,13 @@
   "homepage": "https://github.com/Frerarj/frontend-project-46#readme",
   "dependencies": {
     "commander": "^11.0.0",
-    "eslint": "^8.43.0",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "eslint": "^8.45.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.3",
+    "jest": "^29.6.1"
   }
 }
